fix header + cv

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body class="bg-gray-100 text-gray-900">
 
 
-    <header class="bg-gray-400 text-white text-center py-35 bg-[url(assets/.jpg)] bg-center bg-cover bg-blend-multiply">
+    <header
+        class="bg-gray-400 text-white text-center py-35 bg-[url(assets/header.jpg)] bg-center bg-cover bg-blend-multiply">
         <div>
             <h1 class="text-6xl font-bold">Delianov Clara</h1>
             <p class="text-xl">Data Scientist Student</p>
@@ -188,7 +189,9 @@
         <p class="mt-2">LinkedIn: <a href="https://linkedin.com/in/clara-delianov"
                 target="_blank">linkedin.com/in/clara-delianov</a>
         </p>
-        <p class="mt-2"><a href="https://claradlnv.github.io/assets/cv.pdf" target="_blank">Mon CV format PDF</a></p>
+        <p class="mt-2 underline text-blue-700"><a href="https://claradlnv.github.io/assets/cv.pdf" target="_blank">Mon
+                CV format
+                PDF</a></p>
     </section>
 
     <footer class="text-center py-4 bg-gray-800 text-white mt-6">
