add pp + change cv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <section id="about" class="max-w-3xl mx-auto my-6 p-6 bg-white shadow-lg rounded-lg">
-        <!-- <img src="profile.jpg" alt="Photo de profil" class="block mx-auto rounded-full w-32 h-32"> -->
+        <img src="assets/profile_pic_w.png" alt="Photo de profil" class="block mx-auto rounded-full w-45 h-45">
         <p class="mt-4 text-justify">
             Actuellement en M2 Data Science à l'Université Claude Bernard Lyon 1, je suis à la recherche d'un stage
             de fin d'études pour une durée de 5-6 mois. Passionnée par l’univers de la data,
