--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <div class="mt-4 space-y-4">
             <div class="p-4 bg-gray-100 rounded">
                 <span class="font-bold">Prédiction d'émotion sur audio</span>
-                <p class="text-blue-300"><a href="" target="_blank">Lien github</a></p>
+                <p class="text-blue-300"><a href="https://github.com/CodyneKen/Projet_ML1" target="_blank">Lien
+                        github</a></p>
                 <p>
                     Projet visant à utiliser des méthodes de machine learning pour prédire
                     l'émotion d'un individu à partir d'un audio de ses paroles.
@@ -118,7 +119,8 @@
             </div>
             <div class="p-4 bg-gray-100 rounded">
                 <span class="font-bold">Résumé de vidéos Youtube</span>
-                <p class="text-blue-300"><a href="" target="_blank">Lien github</a></p>
+                <p class="text-blue-300"><a href="https://github.com/Atatra/link-explorer" target="_blank">Lien
+                        github</a></p>
                 <p>Projet de NLP avec pour objectif de faire un résumé du contenu d'une vidéo Youtube.</p>
                 <ul class="list-disc ml-4">
                     <li>Création d'un jeu de données : transcript vidéos Youtube / résumés</li>
